Changes in version 1.3.15
===========================
C: bugfix: diag(vect,-d)
C: complex division with real values improved for NAN

Changes in version 1.3.14
===========================
* C: mkl update to 10.0.3.21
* C: MatrixProperties: Unknown,None
* C: complex: support for NaN
* C: complex division 0/inf=>NaN
* C: + robust against overflow
* C: strong name for core dll
* D: 0.10.0
* D: ILAxisLabel -> ILLabel (in NS also)
* D: AxisLabelAlign -> LabelAlign
* D: legends implemented 

Changes in version 1.3.13
===========================
* C: bugfix:binary operator (some ref.matrices op. on scalar)
* C: bugfix:complex division handling inf's
* C: bugfix:ILDimension (semi)immutable
* C: added ILSpecialData.sphere(int), moebius()
* D: 0.9.29: plot controls
* D: Y-Line graphs starting at '0' now
* D: all markers (and more), -> <a href="http://ilnumerics.net/main.php?site=5136312">docu</a>
* D: implemented colormaps for ILPanel
* D: surface graphs receive X,Y,C arguments
* D: colorbar renders current colormap
* D: SaveToBitmap for ILPanel, ILSubfigure

Changes in version 1.3.12
===========================
* C: new function 'diff'
* C: complex number bug fixes
* D: 0.9.28: plot controls 
* D: internal labeling redesign 
* D: partial tex interpreter
* D: X/Y plots

Changes in version 1.3.11
===========================
* D: 0.9.27: more speaking trace log
* D: removed assertion failure on TickMode.Manual
* C: bugfix: expand emtpy ILArrays

Changes in version 1.3.10
===========================
* new ILArray member: ExportValues(ref BaseT[] result)
* bugfix on ILMath.ccomplex (had empty imag part)
* new special data provider: ILSpecialData
* redesigned ILFigure.dll -> ILNumerics.Drawing.dll
* removed binary installer

Changes in version 1.3.9
===========================
* ILMath.convert supports numeric ILBaseArray as argument
* Intel MKL merged into single lib
* Redesign for OpenGL plot panel (beta)

Changes in version 1.3.8
===========================