@@ -2,6 +2,7 @@ Changes in version 1.3.15
 ===========================
 C: bugfix: diag(vect,-d)
 C: complex division with real values improved for NAN
+C: bugfix:ILArray<>.MaxValue, .MinValue on all NaN's
 
 Changes in version 1.3.14
 ===========================
